--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ install_requires =
     numpy >=0.18
     pandas >=1.0
     xarray >=0.15
-    scipy >=1.4
+    scipy =1.5.3
     sympy >=1.6
     pint >=0.11
     asdf >=2.7
