--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.7
   - setuptools_scm
-  - numpy=1.19.4
+  - numpy>=1.18
   - pandas>=1.0
   - scipy=1.5.3
   - sympy>=1.6
