--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
@@ -34,7 +34,7 @@ properties:
     description: |
       The name of the files host.
     type: string
-  location:
+  directory:
     description: |
       The location of the file on the specified host system.
     type: string
@@ -58,7 +58,7 @@ properties:
         type: string
 
 
-propertyOrder: [filename, suffix, hostname, location, size, created, modified, content, content_hash]
+propertyOrder: [filename, suffix, hostname, directory, size, created, modified, content, content_hash]
 anyOf:
   - required: [filename, content, content_hash]
   - required: [filename,  hostname]
