fix some issues

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
@@ -11,6 +11,7 @@ description: |
   binary block of an asdf file.
 examples:
   -
+    - A PDF-file that is stored in the asdf file
     - |
       !<tag:weldx.bam.de:weldx/core/file-1.0.0>
       filename: file.pdf
