--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python=3.7
   - numpy>=1.18
   - pandas>=1.0
-  - scipy>=1.4
+  - scipy<1.6
   - sympy>=1.6
   - xarray>=0.15
   - pint>=0.11
