--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - setuptools_scm
   - numpy>=1.18
   - pandas>=1.0
-  - scipy=1.5.3
+  - scipy<1.6
   - sympy>=1.6
   - xarray>=0.15
   - pint>=0.11
