--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -1,7 +1,7 @@
 name: weldx
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
   - python=3.7
   - numpy>=1.18
@@ -11,8 +11,10 @@ dependencies:
   - xarray>=0.15
   - pint>=0.11
   - bottleneck
+  - boltons
   - asdf>=2.7
   - openpyxl
+  - fs
   # graph packages
   - networkx
   # Code quality
@@ -26,9 +28,8 @@ dependencies:
   # Plotting
   - ipykernel
   - ipympl=0.5.8
-  - line_profiler
+  - k3d
   - matplotlib=3.3.1
-  - memory_profiler
   - seaborn
   - snakeviz
   - ipywidgets
