--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/point_cloud-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/point_cloud-1.0.0.yaml
@@ -11,7 +11,7 @@ description: |
 
 examples:
   -
-    - A simple PointCloid with triangulation
+    - A simple PointCloud with triangulation
     - |
       !<tag:weldx.bam.de:weldx/core/geometry/point_cloud-1.0.0>
         coordinates: !core/ndarray-1.0.0
@@ -53,7 +53,7 @@ properties:
       datatype:
         type: string
         enum: [uint32, uint64]
-    wx_shape: [(n), 3]
+    wx_shape: [(i), 3]
 
 propertyOrder: [coordinates, attributes, triangles]
 required: [coordinates]
