--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/point_cloud-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/point_cloud-1.0.0.yaml
@@ -39,7 +39,7 @@ properties:
       datatype:
         type: string
         enum: [float32, float64]
-    wx_shape: [(n), 3]
+    wx_shape: [(:), 3]
   attributes:
     description: |
       An arbitrary set of attributes. For example, normals, colors or measured point data can be stored using this
@@ -53,7 +53,7 @@ properties:
       datatype:
         type: string
         enum: [uint32, uint64]
-    wx_shape: [(i), 3]
+    wx_shape: [(:), 3]
 
 propertyOrder: [coordinates, attributes, triangles]
 required: [coordinates]
