--- a/conda.recipe/build_env.yml
+++ b/conda.recipe/build_env.yml
@@ -6,7 +6,8 @@ dependencies:
   - python=3.7
   - setuptools
   - setuptools_scm
-  - conda-build
   - conda-verify
+  - mamba
+  - boa
   - anaconda-client
   - numpydoc>=0.5
