[ci/travis|appveyor] use mamba

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,10 +9,10 @@ platform: x64
 
 install:
   - set PATH=C:\Miniconda38-x64;C:\Miniconda38-x64\Scripts;%PATH%
-  - cmd: conda config --set always_yes yes --set changeps1 no
-  - cmd: conda update -q conda
-  - cmd: conda info -a
-  - cmd: conda env create -f ./environment.yml
+  - cmd: conda config --set always_yes yes --set changeps1 no --add channel conda-forge
+  - cmd: conda install -q mamba
+  - cmd: mamba info -a
+  - cmd: mamba env create -f ./environment.yml
   - activate weldx
 
 build: false
