--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ install:
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
+  - conda install -q mamba
   - conda info -a
 
-  - conda env create -f ./environment.yml
+  - mamba env create -f ./environment.yml
   - conda activate weldx
 
 script:
