--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ install:
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - hash -r
+  #- source "$HOME/miniconda/etc/profile.d/conda.sh"
+  #- hash -r
+  - conda activate base
   - conda config --set always_yes yes --set changeps1 no
+  - conda config --add channel conda-forge
   - conda install -q mamba
   - conda info -a
 
