--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: set package file env
         shell: bash -l {0}
-        run: echo "PACKAGE_DIR=$(conda mambabuild . --output)" >> $GITHUB_ENV
+        run: echo "PACKAGE_DIR=$(conda build . --output)" >> $GITHUB_ENV
 
       - uses: actions/upload-artifact@v2
         with:
