--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,5 +1,5 @@
 name: pytest
-on: [push]
+on: [push, pull_request]
 
 jobs:
   pytest:
@@ -42,11 +42,11 @@ jobs:
 
       - name: pip installs
         run: |
-          pip install pytest pytest-cov setuptools_scm
+          pip install pytest pytest-cov pytest-xdist setuptools_scm
           pip install -e .
       - name: run pytest
         run: |
-          pytest --runslow
+          pytest --runslow -n2
           echo "Exited with '$?'"
           coverage xml
 
