Use mamba in CI services (#238)
* use mamba/boa (to provide conda mambabuild cmd)
* [ci/gh-actions] use mamba-build (boa)
* [ci/travis|appveyor] use mamba

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build from local conda recipe
         shell: bash -l {0}
-        run: conda build .
+        run: conda mambabuild .
 
       - name: set package file env
         shell: bash -l {0}
