--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ install:
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - hash -r
+  - conda activate base
   - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
+  - conda config --add channels conda-forge
+  - conda install -q mamba
   - conda info -a
 
-  - conda env create -f ./environment.yml
+  - mamba env create -f ./environment.yml
   - conda activate weldx
 
 script:
