--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,7 +20,8 @@ sphinx:
 ##  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
-
+build:
+  image: testing
 conda:
   environment: doc/rtd_environment.yml
 python:
