--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -7,9 +7,10 @@ dependencies:
   - setuptools_scm
   - pip
   # Notebook + Plotting
+  - jupyterlab=2
   - ipykernel
-  - ipympl
-  - matplotlib
+  - matplotlib=3.3.1
+  - ipympl=0.5.8
   - nodejs=14
   - pip:
     - git+https://github.com/BAMWelDX/weldx.git
