cleanup dist in MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,10 @@
 recursive-include weldx/asdf/schemas *.yaml
+
+prune .binder
+prune .github
+prune conda.recipe
+prune doc
+prune scripts
+prune tutorials
+
+global-exclude .*
