update to python 3.9 (#229)
* update to python 3.9

* update CHANGELOG.md

* update RTD environment to python 3.9

* update versions

* unpin flake8 for py39

* try RTD testing image for py3.9

* pin binder deps for jupyterlab2

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,11 +20,12 @@ sphinx:
 ##  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
-
+build:
+  image: testing
 conda:
   environment: doc/rtd_environment.yml
 python:
-   version: 3.7
+   version: 3.9
    install:
       - method: pip
         path: .
