--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -3,37 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
+  - python=3.9
   - setuptools_scm
   - pip
-  - numpy>=1.18
-  - pandas>=1.0
-  - scipy>=1.4
-  - sympy>=1.6
-  - xarray>=0.15
-  - pint>=0.11
-  - bottleneck
-  - boltons
-  - asdf>=2.7
-  - openpyxl
-  - fs
-  # graph packages
-  - networkx
-  # Code quality
-  - black
-  - codecov
-  - flake8=3.7
-  - isort>=5.1
-  - pydocstyle=5
-  - pytest
-  - pytest-cov
-  # Plotting
+  # Notebook + Plotting
+  - jupyterlab=2
   - ipykernel
-  - ipywidgets
+  - matplotlib=3.3.2
   - ipympl=0.5.8
-  - k3d
-  - matplotlib=3.3.1
-  - seaborn
-  - snakeviz
-  - ipywidgets
   - nodejs=14
+  - pip:
+    - git+https://github.com/BAMWelDX/weldx.git
