--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
       - name: pytest
         run: |
           pip install pytest pytest-xdist
-          pip install --no-index --find-links ./dist weldx
+          pip install --find-links ./dist weldx
           pytest -n2
 
       - name: set pypi test repo defaults
