--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,12 @@ install_requires =
     ipywidgets
     k3d
 
+[options.extras_require]
+test =
+    pytest
+    pytest-cov
+    pytest-xdist
+
 include_package_data = True
 
 [options.entry_points]
