--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/cache@v2
         env:
           # Increase this value to reset cache if ./conda.recipe/build_env.yml has not changed
-          CACHE_NUMBER: 0
+          CACHE_NUMBER: 1
         with:
           path: ~/conda_pkgs_dir
           key: ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('./conda.recipe/build_env.yml') }}
@@ -83,7 +83,16 @@ jobs:
           fetch-depth: 0 # Fetch all history for all tags and branches
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.9'
+
+      - name: Cache pip
+        uses: actions/cache@v2
+        env:
+          # Increase this value to reset cache if ./setup.cfg has not changed
+          CACHE_NUMBER: 0
+        with:
+          path: ~/.cache/pip
+          key: ubuntu-latest-pip-${{ env.CACHE_NUMBER }}-${{ hashFiles('setup.cfg') }}
 
       - name: pip installs
         run: |
@@ -98,6 +107,18 @@ jobs:
         with:
           name: dist
           path: ./dist/
+
+      - name: get sdist file
+        run: echo "SDIST_FILE=$(find ./dist/*.tar.gz | head -n 1)" >> $GITHUB_ENV
+
+      - name: pip dist install
+        run: |
+          pip install ${{ env.SDIST_FILE }}
+
+      - name: run pytest
+        run: |
+          pip install pytest pytest-cov pytest-xdist
+          pytest -n2
 
       - name: set pypi test repo defaults
         run: |
