min version py 3.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Natural Language :: English
     Programming Language :: Python
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering :: Physics
 project_urls =
@@ -31,7 +32,7 @@ project_urls =
 
 [options]
 packages = weldx
-python_requires = >=3.9
+python_requires = >=3.8
 setup_requires =
     setuptools >=38.3.0
     setuptools_scm
