--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,12 +20,12 @@ sphinx:
 ##  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
-build:
-  image: testing
+#build:
+#  image: testing
 conda:
   environment: doc/rtd_environment.yml
 python:
-   version: 3.9
+   version: 3.8
    install:
       - method: pip
         path: .
