--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -35,6 +35,7 @@ excluded_words:
   - ncols
   - plt
   - pyplot
+  - zorder
   # flake8 --------------------------------------
   - noqa
   - addopts
@@ -55,6 +56,7 @@ excluded_words:
   - ndarray
   - ndim
   - newaxis
+  - tolist
   - vstack
   # pandas / xarray -----------------------------
   - bfill
