wildecard exclude visualization coverage
Co-authored-by: vhirtham <volker.hirthammer@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -25,6 +25,4 @@ coverage:
 ignore:
   - "tests"
   - "*__init__.py"
-  - "weldx/visualization/colors.py"
-  - "weldx/visualization/k3d_impl.py"
-  - "weldx/visualization/matplotlib_impl.py"
+  - "weldx/visualization/*"
