--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-1.0.0.yaml
@@ -5,7 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/aws/process/shielding_gas_type-1.0.0"
 tag: "tag:weldx.bam.de:weldx/aws/process/shielding_gas_type-1.0.0"
 
 title: |
-  <TODO DESCRIPTION>
+  GMAW shielding gas
 description: |
   Description of a gas or gas mixture used for shielding in arc welding.
 type: object
