--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -16,7 +16,8 @@ examples:
         !<tag:weldx.bam.de:weldx/core/time_series-1.0.0>
           unit: millimeter / second
           value: 10
-    - A time_series describing sine oscillation in 3d space along the y-axis
+  -
+    - A time_series describing a sine oscillation in 3d space along the y-axis
     - |
         !<tag:weldx.bam.de:weldx/core/time_series-1.0.0>
           expression: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
