install asdf from github for asdf tests

--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -17,6 +17,7 @@ jobs:
       - name: pip installs
         run: |
           pip install pytest pytest-cov setuptools_scm
+          pip install git+https://github.com/asdf-format/asdf
           pip install .
       - name: run pytest
         run: |
