--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
@@ -7,6 +7,21 @@ tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
 title: |
   Represents an instance in time.
 type: object
+
+examples:
+  -
+    - A timestamp representing the date 2020-01-01 12:00:00 (without timezone information)
+    - |
+        !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
+  -
+    - A timestamp representing the date 2020-01-01 12:00:00 in UTC time
+    - |
+      !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T12:00:00+01:00'}
+  -
+    - A timestamp representing the date 2020-01-01 12:00:00 in CET time
+    - |
+        !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T12:00:00+01:00'}
+
 properties:
   value:
     description: |
