--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
@@ -7,6 +7,17 @@ tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0"
 title: |
   Represents an array of timestamps following pandas.DatetimeIndex.
 
+examples:
+  -
+    - A regular datetimeindex starting at 2020-01-01 and a 1 day intervall till 2020-01-06
+    - |
+        !<tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0>
+          start: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
+          end: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
+          freq: D
+          min: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
+          max: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
+
 definitions:
   values:
     description: |
