use oneOf in time_series-1.0.0.yaml

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -44,7 +44,7 @@ oneOf:
       value:
         description: |
           Number or n-dimensional array that is constant in time.
-        anyOf:
+        oneOf:
           - type: number
           - tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
       unit:
