allow integer for timeseries to test for issue #282

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -44,8 +44,9 @@ oneOf:
       value:
         description: |
           Number or n-dimensional array that is constant in time.
-        oneOf:
+        anyOf:
           - type: number
+          - type: integer
           - tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
       unit:
         description: |
