--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
@@ -7,6 +7,21 @@ tag: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
 title: |
   Representation of a measurement signal with optional data attached.
 type: object
+
+examples:
+  -
+    - A signal representing an analog voltage measurement without data.
+    - |
+        !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
+          signal_type: analog
+          unit: V
+  -
+    - A digital dimensionless signal.
+    - |
+        !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
+          signal_type: digital
+          unit: ''
+
 properties:
   signal_type:
     type: string
