--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -10,6 +10,56 @@ description: |
   It stores information how the different coordinate systems are arranged towards each other. The basic data structure
   is a tree.
 type: object
+
+examples:
+  -
+    - A CSM with two static transformations and no subsystems.
+    - |
+      !<tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy-1.0.0>
+        name: Coordinate system manager 0
+        root_system_name: base
+        subsystems: []
+        coordinate_systems:
+        - !<tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0>
+          name: workpiece
+          reference_system: base
+          transformation: !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0> {}
+        - !<tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0>
+          name: tcp_wire
+          reference_system: workpiece
+          transformation: !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0>
+            time: !<tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0>
+              values: !core/ndarray-1.0.0
+                data: [0, 29000000000]
+                datatype: int64
+                shape: [2]
+              start: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+              end: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M29S}
+              min: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+              max: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M29S}
+            orientations: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+              name: orientations
+              dimensions: [c, v]
+              dtype: <f8
+              data: !core/ndarray-1.0.0
+                data:
+                - [1.0, 0.0, 0.0]
+                - [0.0, -1.0, -1.2246467991473532e-16]
+                - [0.0, 1.2246467991473532e-16, -1.0]
+                datatype: float64
+                shape: [3, 3]
+            coordinates: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+              name: coordinates
+              dimensions: [time, c]
+              dtype: <f8
+              data: !core/ndarray-1.0.0
+                data:
+                - [5.0, 0.0, 2.0]
+                - [295.0, 0.0, 2.0]
+                datatype: float64
+                shape: [2, 3]
+        subsystem_names: []
+
 properties:
   name:
     type: string
