allow integer for timeseries to test for issue #282

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -18,6 +18,7 @@ oneOf:
           Number or n-dimensional array that is constant in time.
         anyOf:
           - type: number
+          - type: integer
           - tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
       unit:
         description: |
