add ASDF schema examples (#274)
* add mathexpr and timeseries examples

* add shielding gas examples

* add equipment example

* add data_transformation-1.0.0.yaml example

* add time datatype examples

* add LCS examples

* add GMAW examples

* fix GMAW process example

* use oneOf in time_series-1.0.0.yaml

* fix typo

* try scalar floats instead of integer for quantity

* allow integer for timeseries to test for issue #282

* fix typo

* fix UTC example

* add error example

* add signal and source examples

* add csm examples

* add subsystem example

* add rotation examples

* yaml formatting

* update CHANGELOG.md

* typo

* remove coverage from asdf schema test CI

* move process types to AWS level namespace

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -8,6 +8,18 @@ title: |
   Schema that describes a subsystem of a local coordinate system hierarchy
 description: |
   It contains the data that is necessary to describe a subsystem.
+
+examples:
+  -
+    - A subsystem assignment of the coordinate systems workpiece, user_frame, T1 and T2.
+    - |
+      !<tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0>
+        name: Subsystem T
+        parent_system: Base CSM
+        root_cs: workpiece
+        members: [workpiece, user_frame, T1, T2]
+        subsystem_names: []
+
 type: object
 properties:
   name:
