--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -8,6 +8,14 @@ title: |
   Measurement error description.
 description: |
   A basic schema to represent a measurement error.
+
+examples:
+  -
+    - An error representing a deviation of 0.1%.
+    - |
+      !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
+        deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.1}
+
 type: object
 properties:
   deviation:
@@ -16,9 +24,6 @@ properties:
     oneOf:
       - type: number
       - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
-
-
 required: [deviation]
-
 flowStyle: block
 ...
