--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     numpy >=0.18
     pandas >=1.0
     xarray >=0.15
-    scipy <1.6
+    scipy >=1.4,!=1.6.0,!=1.6.1
     sympy >=1.6
     pint >=0.11
     asdf >=2.7
