--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -47,8 +47,8 @@ jobs:
           pip install -e .
       - name: run pytest
         run: |
-          pytest -n2 --dist loadscope --nbval --cov=weldx --current-env tutorials/
-          pytest --runslow -n2 --cov-append --cov=weldx tests/
+          pytest -n2 --dist loadscope --nbval --current-env tutorials/
+          pytest --runslow -n2 --cov-append tests/
 
           echo "Exited with '$?'"
           coverage xml
