--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,6 +18,7 @@ jobs:
 
       - uses: actions/cache@v2
         if: startsWith(runner.os, 'Linux')
+        id: cache
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
@@ -26,6 +27,7 @@ jobs:
 
       - uses: actions/cache@v2
         if: startsWith(runner.os, 'macOS')
+        id: cache
         with:
           path: ~/Library/Caches/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
@@ -34,6 +36,7 @@ jobs:
 
       - uses: actions/cache@v2
         if: startsWith(runner.os, 'Windows')
+        id: cache
         with:
           path: ~\AppData\Local\pip\Cache
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
@@ -41,6 +44,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: pip installs
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           pip install wheel
           pip install pytest-cov pytest-xdist setuptools_scm nbval
